✨ feat: build experiences page and resume (#2)

--- a/locales/en.json
+++ b/locales/en.json
@@ -3,10 +3,14 @@
     "navigation": {
       "home": "home",
       "thisIsMe": "This is Phỏn",
-      "aboutMe": "About Me"
+      "aboutMe": "About Me",
+      "experiences": "Experiences",
+      "resume": "Resume"
     },
     "drawer": {
-      "home": "home"
+      "home": "home",
+      "about": "about me",
+      "experiences": "experiences"
     },
     "headerMobile": {
       "title": "Hoài Phong Space",
@@ -37,6 +41,60 @@
       "description4": "I always strive to learn and improve myself through each project to develop more refined applications.",
       "description5": "My colleagues appreciate me for my teamwork skills, as I can balance humor with productivity while always ensuring that I complete my assigned tasks on time.",
       "description6": "I also enjoy sharing new technologies with my friends so we can learn together and improve our products to better align with current market trends."
+    },
+    "experiences": {
+      "title1": "My Experience",
+      "resume": "Here is my resume",
+      "description1": "Everything I have learned and done is summarized here!",
+      "description2": "Details can be viewed below.",
+      "list": {
+        "overview": {
+          "title": "TECHNICAL PROFILE",
+          "description1": "I have over 4+ years of experience in building and developing Websites or Web-based applications.",
+          "description2": "I have experience working with technologies/languages such as ReactJS, NextJS, Gatsby, Material UI, Tailwinds, Antd, HTML5, SCSS, Typescript, etc.",
+          "description3": "I have experience in responsive layouts, cross-browser and design layout using Figma, etc.",
+          "description4": "I have also used and worked with Backend technologies/languages such as NestJS, NodeJS.",
+          "description5": "I have fundamental understanding of databases like MySQL, PostgreSQL, MongoDB, and Redis cache.",
+          "description6": "I have experience using Git and Atlassian tools like Jira, Confluence, and Bitbucket.",
+          "description7": "I have excellent documentation and presentation skills. In terms of foreign languages, I can use English in the workplace, understand documents and communicate in English."
+        },
+        "edu": {
+          "title": "Education",
+          "experiences": {
+            "title": "INFORMATION TECHNOLOGY",
+            "subTitle": "HCMC University of Natural Resources and Environment",
+            "description": "- Majored in Information Technology with a focus on web application development and system design.\n- Studied website and application system analysis and design principles.\n- Gained practical experience in Unity game development fundamentals.\n- Completed internships at three different companies during the COVID-19 pandemic, gaining diverse industry exposure.\n- Applied theoretical knowledge through hands-on projects and real-world applications.",
+            "time": "09/2018 - 09/2022"
+          }
+        },
+        "work": {
+          "title": "Work Experience",
+          "dsv": {
+            "title": "Designveloper - Software Development Company",
+            "subTitle": "FULL STACK DEVELOPER",
+            "description": "- Collaborated with a New Zealand-based client in the PDF tools domain, optimizing web performance and enhancing user acquisition strategies.\n- Developed and maintained high-performance landing pages using Gatsby, Next.js, and React to maximize SEO and user engagement.\n- Led the migration from Next.js Page Router to App Router, leveraging Server Components for improved SEO and performance.\n- Transitioned the backend from Next.js to NestJS for better scalability and maintainability.\n- Integrated and optimized CMS platforms such as Prismic, HubSpot, and Strapi to enable marketing teams to create and launch static pages independently.\n- Empowered the client with a no-code approach, allowing rapid deployment of marketing campaigns and landing pages without developer intervention.\n- Optimized UX and performance for functional tool pages (e.g., Merge, Split, Compress, Annotate PDF) and static pages, contributing to 100K+ signups within a month.\n- Developed high-ranking PDF templates, securing a spot in the top 10 Google search results.\n- Contributed to the company's milestone of reaching +100 million users by improving key traffic-driving features, including localization, static tool pages, and universal CMS integration.\n- Migrated Google Tag Manager to a server-side setup, reducing client-side JavaScript load and boosting landing page performance by 2-4%.\n- \"Sharing Spark Award\" for outstanding knowledge sharing and workshop organization.",
+            "time": "02/2024 - Present"
+          },
+          "saigonMio": {
+            "title": "Saigon MIO Technology JSC",
+            "subTitle": "FULL STACK DEVELOPER",
+            "description": "- Played a key role in the end-to-end development of enterprise-grade internal systems, ensuring scalability and maintainability.\n- Worked extensively with the MVC architecture while integrating React to enhance UI development using a component-based approach.\n- Designed and structured databases aligned with business logic using MySQL, optimizing performance and data integrity.\n- Integrated and synchronized third-party payment gateways such as MoMo, ZaloPay, VNPAY, ChargeBee, and Xendit to facilitate seamless transactions.\n- Led knowledge-sharing sessions on Next.js and contributed to its implementation in future frontend projects.\n- Actively participated in the R&D team, researching and integrating emerging technologies, including AI-driven features, into internal systems to enhance automation and efficiency.",
+            "time": "04/2022 - 02/2024"
+          },
+          "bessfu": {
+            "title": "BESSFU Solution Technology Company Limited",
+            "subTitle": "FRONTEND DEVELOPER",
+            "description": "- Developed and implemented user-friendly UI components based on Figma designs using Next.js, React.js, and MUI Material.\n- Contributed to the frontend development of an e-learning platform for VUS English learning system, ensuring seamless user experience and responsiveness.\n- Designed and built interactive English-learning mini-games using JavaScript and JQuery, enhancing student engagement.\n- Developed various educational games, including math challenges, memory card matching, word association, and pronunciation-based image selection.\n- Optimized application performance and UI responsiveness to provide an engaging learning experience across devices.",
+            "time": "04/2022 - 09/2023"
+          },
+          "snp": {
+            "title": "Saigon Newport Corporation (SNP)",
+            "subTitle": "RESEARCH & DEVELOPMENT INTERN",
+            "description": "- Gained in-depth understanding of the company's culture, operational framework, and logistics ecosystem.\n- Conducted research and analysis to tackle real-world business challenges, implementing practical solutions through technology.\n- Led a team of interns to develop a web-based container management system using ReactJS, integrating seamlessly with the company's internal API.\n- Designed and optimized application workflows to enhance operational efficiency and data management.\n- Created detailed reports and comprehensive documentation for system implementations and process improvements.",
+            "time": "04/2022 - 05/2023"
+          }
+        }
+      }
     }
   },
   "metadata": {
@@ -47,7 +105,7 @@
         "title": "Hi, I'm Hoai Phong",
         "description": "This is where I share my random stories..."
       },
-      "keywords": "Pham Hoai Phong,Phong's Corner,Hoai Phong space"
+      "keywords": "Nguyen Hoai Phong,Phong's Corner,Hoai Phong space"
     },
     "about": {
       "title": "About Me - Hoai Phong",
@@ -56,13 +114,26 @@
         "title": "Who is Hoai Phong?",
         "description": "Ask me anything here."
       },
-      "keywords": "Pham Hoai Phong,Phong's Corner,Hoai Phong space"
+      "keywords": "Nguyen Hoai Phong,Phong's Corner,Hoai Phong space"
+    },
+    "experiences": {
+      "title": "Work Experience - Hoai Phong",
+      "description": "A summary of my work experience",
+      "og": {
+        "title": "Phong's Work Experience",
+        "description": "The experience I've accumulated will be shared here."
+      },
+      "keywords": "Nguyen Hoai Phong's Experience,Hoai Phong's Work Experience,Projects Hoai Phong Has Worked On,Hoai Phong's Professional Skills,Hoai Phong's Career Achievements,Hoai Phong Developer,Hoai Phong Frontend Developer,Hoai Phong Projects,Frontend Developer,Hoai Phong Frontend Engineer,Frontend Engineer"
     }
   },
   "breadcrumbs": {
     "about": {
       "home": "Home",
       "about": "About me"
+    },
+    "experiences": {
+      "home": "Home",
+      "experiences": "My experience"
     }
   }
 }
