--- a/locales/vi.json
+++ b/locales/vi.json
@@ -35,30 +35,37 @@
     "about": {
       "title": "Mình là ai?",
       "introduction": "Hí, mình là Hoài Phong",
-      "position1": "Website Developer",
-      "position2": "Sofware Developer",
-      "description1": "Hiện tại mình đang là một",
-      "description2": ", và cũng đang tập tành để trở thành một",
-      "description3": "Mình là sinh viên trường HCMUNRE, một trường không quá mạnh về IT, vì vậy đa số kiến thức lập trình mình đều tự học hỏi và rèn luyện.",
-      "description4": "Mình luôn cố gắng học hỏi và hoàn thiện bản thân qua từng project để phát triển các ứng dụng ngày càng chỉnh chu hơn.",
-      "description5": "Mọi người trong team đều yêu thích và đánh giá cao mình nhờ khả năng làm việc nhóm tốt, biết pha trò để tạo không khí vui vẻ nhưng vẫn luôn đảm bảo hoàn thành task được giao đúng tiến độ.",
-      "description6": "Mình cũng rất thích chia sẻ công nghệ mới với bạn bè để cùng nhau học hỏi và cải thiện sản phẩm, giúp nó phù hợp hơn với thị hiếu hiện tại."
+      "intro": {
+        "prefix": "Hiện tại mình đang là một",
+        "positions": ["Website Developer", "Sofware Developer"],
+        "connector": ", và cũng đang tập tành để trở thành một"
+      },
+      "highlights": [
+        "Mình là sinh viên trường HCMUNRE, một trường không quá mạnh về IT, vì vậy đa số kiến thức lập trình mình đều tự học hỏi và rèn luyện.",
+        "Mình luôn cố gắng học hỏi và hoàn thiện bản thân qua từng project để phát triển các ứng dụng ngày càng chỉnh chu hơn.",
+        "Mọi người trong team đều yêu thích và đánh giá cao mình nhờ khả năng làm việc nhóm tốt, biết pha trò để tạo không khí vui vẻ nhưng vẫn luôn đảm bảo hoàn thành task được giao đúng tiến độ.",
+        "Mình cũng rất thích chia sẻ công nghệ mới với bạn bè để cùng nhau học hỏi và cải thiện sản phẩm, giúp nó phù hợp hơn với thị hiếu hiện tại."
+      ]
     },
     "experiences": {
-      "title1": "Kinh nghiệm làm việc",
+      "title": "Kinh nghiệm làm việc",
       "resume": "Đây là CV của mình",
-      "description1": "Những gì tui đã học và làm, đều được tóm tắt ở đây !",
-      "description2": "Mọi người có thể xem chi tiết ở phía bên dưới nhé.",
+      "descriptions": [
+        "Những gì tui đã học và làm, đều được tóm tắt ở đây !",
+        "Mọi người có thể xem chi tiết ở phía bên dưới nhé."
+      ],
       "list": {
         "overview": {
           "title": "Kinh nghiệm/Kiến thức",
-          "description1": "Mình có hơn 4 năm kinh nghiệm về xây dựng và phát triển Websites hoặc Web based applications.",
-          "description2": "Mình có kinh nghiệm, làm việc và sử dụng những công nghệ/ngôn ngữ như ReactJS, NextJS, Gatsby, Material UI, Tailwinds, Antd, HTML5, SCSS, Typescript, v.v",
-          "description3": "Mình có kinh nghiệm trong việc xử lí bố cục websites, responsive và cross-browser sử dụng các tools như Figma, v.v",
-          "description4": "Ngoài ra, mình cũng đã từng sử dụng và làm việc với các công nghệ/ngôn ngữ Backend như NestJS, NodeJS.",
-          "description5": "Mình có kiến thức cơ bản về các loại cơ sở dữ liệu như MySQL, PostgreSQL, MongoDB và Redis cache.",
-          "description6": "Mình có kinh nghiệm sử dụng Git và các công cụ Atlassian như Jira, Confluence, và Bitbucket.",
-          "description7": "Mình có kỹ năng làm tài liệu và thuyết trình tốt. Về ngoại ngữ, mình có thể sử dụng tiếng Anh trong quá trình làm việc, đọc hiểu tài liệu và giao tiếp bằng tiếng Anh."
+          "items": [
+            "Mình có hơn 4 năm kinh nghiệm về xây dựng và phát triển Websites hoặc Web based applications.",
+            "Mình có kinh nghiệm, làm việc và sử dụng những công nghệ/ngôn ngữ như ReactJS, NextJS, Gatsby, Material UI, Tailwinds, Antd, HTML5, SCSS, Typescript, v.v",
+            "Mình có kinh nghiệm trong việc xử lí bố cục websites, responsive và cross-browser sử dụng các tools như Figma, v.v",
+            "Ngoài ra, mình cũng đã từng sử dụng và làm việc với các công nghệ/ngôn ngữ Backend như NestJS, NodeJS.",
+            "Mình có kiến thức cơ bản về các loại cơ sở dữ liệu như MySQL, PostgreSQL, MongoDB và Redis cache.",
+            "Mình có kinh nghiệm sử dụng Git và các công cụ Atlassian như Jira, Confluence, và Bitbucket.",
+            "Mình có kỹ năng làm tài liệu và thuyết trình tốt. Về ngoại ngữ, mình có thể sử dụng tiếng Anh trong quá trình làm việc, đọc hiểu tài liệu và giao tiếp bằng tiếng Anh."
+          ]
         },
         "edu": {
           "title": "Học Vấn",
